Listas, Tuplas y Diccionarios

--- a/01-python/00-introduccion.ipynb
+++ b/01-python/00-introduccion.ipynb
@@ -207,10 +207,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arreglo = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "arreglo [0:3] # 0,3\n",
+    "arreglo [5:] # Hasta el final\n",
+    "arreglo [:7] # Desde el principio\n",
+    "arreglo [-1] # Indice Negativo Empieza desde el final\n",
+    "arreglo [3:-2]\n",
+    "arreglo [-8:8]\n",
+    "arreglo [-4:-1]\n",
+    "arreglo [-7:]\n",
+    "arreglo [:-3]\n",
+    "arreglo [:]  #Toma todo el arreglo, es una forma de clonar el arreglo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 7, 8, 9)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arregloTupla = (1,2,3,4,5,6,7,8,9,10)\n",
+    "arregloTupla[5:9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Carlos'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diccionario = { \n",
+    "    \"nombre\":\"Carlos\",\n",
+    "    \"apellido\":\"Sarzosa\", \n",
+    "    \"sueldo\": 1.2 \n",
+    "}\n",
+    "\n",
+    "diccionario [\"nombre\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Las tuplas y las listas, funcionan mas como arreglos\n",
+    "# Los diccionarios funcionan con un valor."
+   ]
   }
  ],
  "metadata": {
