--- a/01-python/00-introduccion.ipynb
+++ b/01-python/00-introduccion.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -50,29 +50,16 @@
     "estudiante = True\n",
     "hijos = None\n",
     "\n",
-    "print (type(entero),type(decimales),type(nombre),type(segundo_nombre),type(casado),type(estudiante),type(hijos))\n",
+    "print (type(entero),\n",
+    "       type(decimales),\n",
+    "       type(nombre),\n",
+    "       type(segundo_nombre),\n",
+    "       type(casado),\n",
+    "       type(estudiante),\n",
+    "       type(hijos))\n",
     "\n",
     "print(nombre)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nombre' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-c8a877b76fa9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnombre\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'nombre' is not defined"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -223,16 +210,16 @@
    ],
    "source": [
     "arreglo = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "arreglo [0:3] # 0,3\n",
-    "arreglo [5:] # Hasta el final\n",
-    "arreglo [:7] # Desde el principio\n",
-    "arreglo [-1] # Indice Negativo Empieza desde el final\n",
+    "arreglo [0:3]   # 0,3\n",
+    "arreglo [5:]    # Hasta el final\n",
+    "arreglo [:7]    # Desde el principio\n",
+    "arreglo [-1]    # Indice Negativo Empieza desde el final\n",
     "arreglo [3:-2]\n",
     "arreglo [-8:8]\n",
     "arreglo [-4:-1]\n",
     "arreglo [-7:]\n",
     "arreglo [:-3]\n",
-    "arreglo [:]  #Toma todo el arreglo, es una forma de clonar el arreglo"
+    "arreglo [:]     #Toma todo el arreglo, es una forma de clonar el arreglo"
    ]
   },
   {
@@ -284,13 +271,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Las tuplas y las listas, funcionan mas como arreglos\n",
     "# Los diccionarios funcionan con un valor."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Palabra Clave in\n",
+    "12 in arreglo  # Para saber si existe el valor en el arreglo\n",
+    "10 in arreglo  # Devuelve un boleano, forma util de buscar en arreglos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Longitud del arreglo\n",
+    "len(arreglo)\n",
+    "len(arregloTupla)\n",
+    "len(diccionario)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Para diccionarios se debe trabajar con Key \"Llaves\"\n",
+    "\"nombre\" in diccionario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# En las tuplas no se puede eliminar o añadir elementos, \n",
+    "# Solo se puede realizar en las listas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
