--- a/01-python/00-introduccion.ipynb
+++ b/01-python/00-introduccion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Titulo 1"
+    "# Introducción a Python"
    ]
   },
   {
@@ -326,16 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,15 +352,158 @@
    "outputs": [],
    "source": [
     "# En las tuplas no se puede eliminar o añadir elementos, \n",
-    "# Solo se puede realizar en las listas"
+    "# Solo se puede realizar en las listas\n",
+    "# Una tupla es estatica, no se puede modificar.\n",
+    "# Modificar valores de una tupla, no permite, solo son elelentos de lectura."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arreglo[0] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arreglo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Algunas funciones para los arreglos\n",
+    "#arreglo.pop\n",
+    "#arreglo.append\n",
+    "#arreglo.insert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for numeroLista in arreglo:\n",
+    "    print(numeroLista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nombre\n",
+      "apellido\n",
+      "sueldo\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in diccionario:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "contador = 0\n",
+    "while contador < 10:\n",
+    "    print(contador)\n",
+    "    contador+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# En los diccionarios se puede guardar cualquier cosa o valor\n",
+    "# Recomendado no usar esta sitaxis.\n",
+    "carlos = {\n",
+    "    True: \"Carlos\",\n",
+    "    False: \"Sarzosa\",\n",
+    "    1: 1.2,\n",
+    "    1.1: 89,\n",
+    "    'edad': 31,\n",
+    "    \"mascotas\": [{\"nombre\":\"oso\"}],\n",
+    "    None:None\n",
+    "}\n",
+    "\n",
+    "carlos['edad'] = 25\n",
+    "carlos['apellido'] = 'Sarzosa'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Los diccionarios \"Key\" se debe usar como Strings."
+   ]
   }
  ],
  "metadata": {
