Manejo de Errores

--- a/01-python/00-introduccion.ipynb
+++ b/01-python/00-introduccion.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +106,26 @@
    ],
    "source": [
     "if(''):\n",
+    "    print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truty\n"
+     ]
+    }
+   ],
+   "source": [
+    "if(1):\n",
     "    print('Truty')\n",
     "else:\n",
     "    print('Falsy')"
@@ -490,20 +510,235 @@
     "    'edad': 31,\n",
     "    \"mascotas\": [{\"nombre\":\"oso\"}],\n",
     "    None:None\n",
-    "}\n",
-    "\n",
-    "carlos['edad'] = 25\n",
-    "carlos['apellido'] = 'Sarzosa'"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Los diccionarios \"Key\" se debe usar como Strings."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "carlos['edad'] = 25\n",
+    "carlos['apellido'] = 'Sarzosa'\n",
+    "carlos['mascotas'][0]['nombre'] ='Pardo'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{True: 1.2,\n",
+       " False: 'Sarzosa',\n",
+       " 1.1: 89,\n",
+       " 'edad': 25,\n",
+       " 'mascotas': [{'nombre': 'oso'}],\n",
+       " None: None,\n",
+       " 'apellido': 'Sarzosa'}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "carlos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{True: 1.2,\n",
+       " False: 'Sarzosa',\n",
+       " 1.1: 89,\n",
+       " 'edad': 25,\n",
+       " 'mascotas': [{'nombre': 'Pardo'}],\n",
+       " None: None,\n",
+       " 'apellido': 'Sarzosa'}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "carlos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([True, False, 1.1, 'edad', 'mascotas', None, 'apellido'])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# El tipo es una clase de tipo dict_keys\n",
+    "carlos.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([1.2, 'Sarzosa', 89, 25, [{'nombre': 'Pardo'}], None, 'Sarzosa'])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "carlos.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict_keys'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(carlos.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict_values'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(carlos.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "1.1\n",
+      "edad\n",
+      "mascotas\n",
+      "None\n",
+      "apellido\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Iteracion de Llaves\n",
+    "for llaves in carlos.keys():\n",
+    "    print (llaves)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2\n",
+      "Sarzosa\n",
+      "89\n",
+      "25\n",
+      "[{'nombre': 'Pardo'}]\n",
+      "None\n",
+      "Sarzosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Iteracion de Valores\n",
+    "for valores in carlos.values():\n",
+    "    print (valores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# En Python se utiliza el OR o AND en vez de | y &\n",
+    "\n",
+    "1==1  or 2==2\n",
+    "1!=1 and 2!=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
