--- a/01-python/01-ERRORES.ipynb
+++ b/01-python/01-ERRORES.ipynb
@@ -14,25 +14,40 @@
     }
    ],
    "source": [
-    "try:\n",
-    "    asasas\n",
-    "    0//0\n",
-    "    a={'b':'b'}\n",
-    "    a['c']\n",
-    "except NameError as nameError:\n",
-    "    print (\"Name error, variable no decalarada\")\n",
-    "except (ZeroDivisionError, KeyError) as errorComun:\n",
-    "    print(\"Error comun en Python\")\n",
-    "except Exception as error:\n",
-    "    print(\"Error de Ecepción\")"
+    "# asasasas  NameError\n",
+    "# das sada  SyntaxError\n",
+    "# 0/0       ZeroDivisionError\n",
+    "# a{'b'}    KeyError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-15-c42d025c7094>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-15-c42d025c7094>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    except NameError as error:\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # asasasas\n",
+    "    # 0/0\n",
+    "    # a ={'b':'b'}\n",
+    "    # a['b']  \n",
+    "    \n",
+    "except NameError as error:\n",
+    "    print(\"NAME ERROR, VARIABLE NO DECLARADA)\n",
+    "except (ZeroDivisionError, KeyError) as errorComun:\n",
+    "    print(\"Error comun Python\")\n",
+    "except Exception as error:\n",
+    "    print(error)"
+   ]
   }
  ],
  "metadata": {
