--- a/01-python/02-FUNCIONES.ipynb
+++ b/01-python/02-FUNCIONES.ipynb
@@ -267,7 +267,8 @@
     "           opcional_uno = 1,   # 2. Parametros Opcionales\n",
     "           opcional_dos = 2,\n",
     "           *infinitos,         # 3. Parametros Infinitos\n",
-    "           **kwargs):          # 4. Key Words Arguments"
+    "           **kwargs):          # 4. Key Words Arguments\n",
+    "\n"
    ]
   }
  ],
